--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,15 @@
         @apply text-white;
     }
 }
+
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+::-webkit-scrollbar-track {
+	background: rgb(217 70 239);
+}
+
+::-webkit-scrollbar-thumb {
+	background: #fff;
+}
